[package]
name = "mdns_client"
version = "0.1.0"
authors = ["robban"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
net2 = "0.2.34"
mdns = "1.1.0"
tokio = { version = "0.2.22", features = ["full"] }
futures-util = "0.3.5"
